--- a/src/app/instruction-list/operands/operands.component.scss
+++ b/src/app/instruction-list/operands/operands.component.scss
@@ -3,5 +3,6 @@ div.operands {
    font-family: Monospace;
    font-size: 12pt;
    padding: 5px 2em;
+   padding-right: 0;
    margin: 5px;
 }
