--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,10 @@
    font-weight: bold;
 }
 
+.bottom-border {
+   border-bottom: 2px solid $clr-global-font-color-secondary;
+}
+
 .left-justify {
    text-align: left;
 }
